# hpc_codes

./: .gitmodules  README.md  REVIEW_MAXWELL.md  comm.c  gauss_seidel.h  gf.c  timer.c
.github/workflows/: maxwell-kokkos-ctest.yml  maxwell-penalty-ctest.yml  multigrid-ctest.yml
Maxwell_Kokkos/: CLAUDE.md  CMakeLists.txt  Report.md
Maxwell_Kokkos/LICENSES/: hoehrmann.txt
Maxwell_Kokkos/doc/: documentation.tex
Maxwell_Kokkos/scripts/: hdf5_to_vtk.py  make_xdmf.py
Maxwell_Kokkos/src/: CMakeLists.txt  HDF5BinaryWrite.cpp  HDF5BinaryWrite.hpp  analytic_parameters.h  analytic_solutions.hpp  comm.cpp  comm.hpp  derivatives.hpp  domain.c  domain.h  driver.cpp  generate_ccode.py  gf.cpp  gf.hpp  io.cpp  io.hpp  kokkos_exec_check.hpp  maxwell.toml  maxwell_eqs.cpp  maxwell_eqs.hpp  maxwell_parameters.cpp  maxwell_parameters.h  mpi_check.h  numerical.cpp  numerical.hpp  parameter.cpp  parameter.hpp  rk4.cpp  rk4.hpp  simple_maxwell.h  timer.c  timer.h
Maxwell_Kokkos/src/tests/: check_generated_simple_maxwell.sh  test_checkpoint.sh  test_rk4.cpp  test_sync.cpp  test_topology.c  verify.py
Maxwell_Penalty/: CLAUDE.md  CMakeLists.txt  Develop_Penalty.md  GPU_Maxwell.md  LICENSE  Review.md
Maxwell_Penalty/LICENSES/: tomlplusplus.txt
Maxwell_Penalty/doc/: documentation.tex
Maxwell_Penalty/scripts/: MaxwellSystemAndAlgorithm.ipynb  SimpleMaxwell.ipynb  analytic_solution.ipynb  convergence_test.py  fix_vti_header.py  gen_movie_from_png.sh  incoming_wave.ipynb  omp_mpi.sub  pure_mpi.sub  setup_sporc.sh
Maxwell_Penalty/src/: CMakeLists.txt  Checkpoint.md  HDF5BinaryWrite.c  HDF5BinaryWrite.h  Makefile  alloc_check.h  analytic_solutions.c  analytic_solutions.h  comm.c  comm.h  derivatives.h  domain.c  driver.c  gf.c  gf.h  hdf5_check.h  io.c  io.h  maxwell_eqs.c  maxwell_eqs.h  maxwell_parameters.cc  maxwell_waveguide.toml  numerical.c  numerical.h  parameter.cc  parameter.h  rk4.c  rk4.h  timer.c  timer.h
Maxwell_Penalty/src/tests/: run_tests.sh  test_checkpoint.sh  test_rk4.c  test_sync.c
Multigrid/: CELL_CENTERED.md  CMakeLists.txt  Documentation.md  LICENSE  Makefile  Plan.md  REVIEW.md  comm.h  domain.c  driver.c  driver_multigrid.c  gauss_seidel.c  io.c  io.h  multigrid.c  multigrid.toml  multigrid_parameters.cc  parameter.h
Multigrid/PythonReference/: Poisson2D_Cartesian-WithNumba.ipynb  Report.md  multigrid2d_numba.py  multigrid3d_numba.py
Multigrid/doc/: documentation.tex  tutorial.tex
Multigrid/doc/history/: Boundary_plan.md  CellCentred_plan.md  README.md
Multigrid/scripts/: make_xdmf.py
Multigrid/src/: CLAUDE.md  CMakeLists.txt  HDF5BinaryWrite.c  HDF5BinaryWrite.h  Makefile  bc.c  bc.h  comm.c  comm.h  domain.c  domain.h  driver_multigrid.c  gauss_seidel.c  gf.c  gf.h  io.c  io.h  multigrid.c  multigrid.h  multigrid.toml  multigrid_parameters.cc  multigrid_parameters.h  parameter.cc  parameter.h  parameter.hpp  problem.h  problem_helpers.c  problem_registry.c  timer.c  timer.h
Multigrid/src/tests/: CMakeLists.txt  h5read.py  run_test.sh  run_test_child.sh  run_test_convergence.sh  run_test_deferred_correction.sh  run_test_make_xdmf.sh  run_test_parser.sh  run_test_project.sh  run_test_prolong.sh  run_test_prolong_cc.sh  run_test_prolong_nl.sh  run_test_restrict_cc.sh  run_test_restrict_nl.sh  test_child_2d.c  test_child_3d.c  test_deferred_correction_3d.c  test_domain_2d.c  test_domain_3d.c  test_project_2d.c  test_project_3d.c  test_prolong_2d.c  test_prolong_3d.c  test_prolong_cc_3d.c  test_prolong_nl_2d.c  test_prolong_nl_3d.c  test_restrict_cc_3d.c  test_restrict_nl_2d.c  test_restrict_nl_3d.c  verify.py  verify_convergence.py  verify_nl_prolong.py  verify_nl_restrict.py  verify_zeros.py
Multigrid/tests/: test_project_2d.c  test_project_3d.c
PythonReference/: Poisson3D_Cartesian-WithNumba.ipynb  Poisson_Cartesian-WithNumba.ipynb  Poisson_Spherical-WithNumba.ipynb  multigrid_numba.py
tests/: check.py  run_test.sh  run_test_child.sh  run_test_prolong.sh  run_test_restrict_nl.sh  test_child_2d.c  test_child_3d.c  test_domain_2d.c  test_domain_3d.c  test_prolong_2d.c  test_prolong_nl_2d.c  test_restrict_nl_2d.c  test_restrict_nl_3d.c  verify_nl_restrict.py  verify_zeros.py
